all pages but edit are set up, minor issues like z-index and tighter front-end setup are still issues. also, items still dont load right away, and locking  still broke

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -27,6 +27,29 @@
         
 }
 
+.delete__item__list{
+    height: 65vh;
+    width: 75vw;
+    grid-area: list;
+    padding: 1rem;
+    display: grid;
+    align-items: center;
+    align-content: start;
+    justify-items: center;
+    justify-self: center;
+}
+
+.add__item__list{
+    height: 65vh;
+    width: 75vw;
+    grid-area: list;
+    padding: 1rem;
+    display: grid;
+    align-items: center;
+    align-content: start;
+    justify-items: center;
+    justify-self: center;
+}
 
 .item__list{
     height: 65vh;
