--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -73,11 +73,48 @@
     color: white;
 }
 
+.home_button{
+    background-color: rgb(189, 73, 243);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.home_button{
+    background-color: white; 
+    color: black; 
+    border: 2px solid rgb(189, 73, 243);
+}
+.home_button:hover{
+    background-color: rgb(189, 73, 243);
+    color: white;
+}
+
 .item__list{
     border: 1px solid black;
     overflow: scroll;
     box-shadow: inset 0px 0px 5px 0px rgb(0, 0, 0);
 
+}
+
+.add__item__list{
+    border: 1px solid black;
+    overflow: scroll;
+    box-shadow: inset 0px 0px 5px 0px rgb(0, 0, 0);
+
+}
+
+.delete__item__list{
+    border: 1px solid black;
+    overflow: scroll;
+    box-shadow: inset 0px 0px 5px 0px rgb(0, 0, 0);
 }
 
 .expire__items{
